--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 django==2.2.1
+psycopg2>=2.7,<3.0
 django-heroku==0.3.1
 gunicorn==19.9.0
-sqlite==3.29.0
 sqlparse==0.3.0
 whitenoise==4.1.3
+requests
